@@ -28,8 +28,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.ForwardingListenableFuture.SimpleForwardingListenableFuture;
 import com.google.common.util.concurrent.Futures;
@@ -48,8 +48,8 @@ import eu.solven.adhoc.engine.context.IQueryPreparator;
 import eu.solven.adhoc.engine.context.QueryPod;
 import eu.solven.adhoc.engine.context.StandardQueryPreparator;
 import eu.solven.adhoc.eventbus.IAdhocEventBus;
-import eu.solven.adhoc.measure.IMeasureForest;
-import eu.solven.adhoc.measure.MeasureForest;
+import eu.solven.adhoc.measure.forest.IMeasureForest;
+import eu.solven.adhoc.measure.forest.MeasureForest;
 import eu.solven.adhoc.measure.model.IMeasure;
 import eu.solven.adhoc.measure.operator.IHasOperatorFactory;
 import eu.solven.adhoc.measure.operator.IOperatorFactory;
@@ -202,7 +202,8 @@ public class CubeWrapper implements ICubeWrapper, IHasHealthDetails {
 		IOperatorFactory operatorFactory = IHasOperatorFactory.getOperatorsFactory(engine);
 		forest.getMeasures().forEach(measure -> {
 			try {
-				ColumnGeneratorHelpers.getColumnGenerators(operatorFactory, Set.of(measure), IValueMatcher.MATCH_ALL)
+				ColumnGeneratorHelpers
+						.getColumnGenerators(operatorFactory, ImmutableSet.of(measure), IValueMatcher.MATCH_ALL)
 						.forEach(columnGenerator -> {
 							// TODO How conflicts should be handled? `ColumnMetadata.merge`?
 							columnGenerator.getColumnTypes().forEach((columnName, type) -> {
@@ -252,7 +253,7 @@ public class CubeWrapper implements ICubeWrapper, IHasHealthDetails {
 
 		Set<String> generatedColumns = columnGenerators.stream()
 				.flatMap(cg -> cg.getColumnTypes().keySet().stream())
-				.collect(Collectors.toSet());
+				.collect(ImmutableSet.toImmutableSet());
 
 		Map<String, CoordinatesSample> columnToSample = new TreeMap<>();
 
