@@ -25,12 +25,12 @@ package eu.solven.adhoc.measure.decomposition.many2many;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
@@ -56,8 +56,8 @@ import eu.solven.adhoc.query.filter.ISliceFilter;
 import eu.solven.adhoc.query.filter.value.IValueMatcher;
 import eu.solven.adhoc.query.filter.value.InMatcher;
 import eu.solven.adhoc.query.groupby.GroupByColumns;
+import eu.solven.adhoc.util.AdhocMapPathGet;
 import eu.solven.adhoc.util.NotYetImplementedException;
-import eu.solven.pepper.mappath.MapPathGet;
 import lombok.extern.slf4j.Slf4j;
 
 /**
@@ -99,7 +99,7 @@ public class ManyToManyNDDecomposition implements IDecomposition {
 		this.manyToManyDefinition = manyToManyDefinition;
 
 		Set<String> elementColumns = getInputColumns(options);
-		String groupColumn = MapPathGet.getRequiredString(options, K_OUTPUT);
+		String groupColumn = AdhocMapPathGet.getRequiredString(options, K_OUTPUT);
 
 		if (elementColumns.contains(groupColumn)) {
 			throw new UnsupportedOperationException("TODO This case requires specific behaviors and unitTests");
@@ -107,7 +107,7 @@ public class ManyToManyNDDecomposition implements IDecomposition {
 	}
 
 	protected Set<String> getInputColumns(Map<String, ?> options) {
-		Collection<String> rawInputColumns = MapPathGet.getRequiredAs(options, K_INPUTS);
+		Collection<String> rawInputColumns = AdhocMapPathGet.getRequiredAs(options, K_INPUTS);
 		return ImmutableSet.copyOf(rawInputColumns);
 	}
 
@@ -122,7 +122,7 @@ public class ManyToManyNDDecomposition implements IDecomposition {
 	}
 
 	protected Set<?> getQueryStepMatchingGroupsNoCache(ISliceWithStep slice) {
-		String groupColumn = MapPathGet.getRequiredString(options, K_OUTPUT);
+		String groupColumn = AdhocMapPathGet.getRequiredString(options, K_OUTPUT);
 
 		ISliceFilter filter = slice.getQueryStep().getFilter();
 
@@ -136,12 +136,12 @@ public class ManyToManyNDDecomposition implements IDecomposition {
 		Map<String, ?> elementCoordinates = slice.getSlice().optGroupBy(elementColumns);
 		if (elementCoordinates.size() < elementColumns.size()) {
 			// We lack some coordinates
-			return List.of(IDecompositionEntry.of(Map.of(), value));
+			return ImmutableList.of(IDecompositionEntry.of(Map.of(), value));
 		}
 
 		Set<Object> groups = getGroups(slice, elementCoordinates);
 
-		String groupColumn = MapPathGet.getRequiredString(options, K_OUTPUT);
+		String groupColumn = AdhocMapPathGet.getRequiredString(options, K_OUTPUT);
 
 		return makeDecomposition(elementCoordinates, value, groupColumn, groups);
 	}
@@ -206,28 +206,28 @@ public class ManyToManyNDDecomposition implements IDecomposition {
 	@Override
 	public List<IWhereGroupByQuery> getUnderlyingSteps(CubeQueryStep step) {
 		Set<String> elementColumns = getInputColumns(options);
-		String groupColumn = MapPathGet.getRequiredString(options, K_OUTPUT);
+		String groupColumn = AdhocMapPathGet.getRequiredString(options, K_OUTPUT);
 
 		ISliceFilter requestedFilter = step.getFilter();
 		ISliceFilter underlyingFilter = convertGroupsToElementsFilter(groupColumn, requestedFilter);
 
 		if (!step.getGroupBy().getGroupedByColumns().contains(groupColumn)) {
 			// None of the requested column is an output column of this decomposition : there is nothing to decompose
-			return Collections.singletonList(MeasurelessQuery.edit(step).filter(underlyingFilter).build());
+			return List.of(MeasurelessQuery.edit(step).filter(underlyingFilter).build());
 		}
 
 		// If we are requested on the dispatched level, we have to groupBy the input level
-		Set<IAdhocColumn> allGroupBys = new HashSet<>();
+		Set<IAdhocColumn> allGroupBys = new LinkedHashSet<>();
 		allGroupBys.addAll(step.getGroupBy().getNameToColumn().values());
 		// The groupColumn is generally meaningless to the underlying measure
 		allGroupBys.removeIf(c -> c.getName().equals(groupColumn));
 
-		elementColumns.forEach(elementColumn -> allGroupBys.add(ReferencedColumn.ref(elementColumn)));
+		allGroupBys.addAll(elementColumns.stream().map(ReferencedColumn::ref).toList());
 
 		// TODO If we filter some group, we should propagate as filtering some element
 		// step.getFilter().
 
-		return Collections.singletonList(
+		return List.of(
 				MeasurelessQuery.edit(step).filter(underlyingFilter).groupBy(GroupByColumns.of(allGroupBys)).build());
 	}
 
@@ -242,7 +242,8 @@ public class ManyToManyNDDecomposition implements IDecomposition {
 				// Plain filter on the group column: transform it into a filter into the input column
 				Set<Map<String, IValueMatcher>> elements = elementsMatchingGroups(columnFilter.getValueMatcher());
 
-				Set<ISliceFilter> elementsFilters = elements.stream().map(AndFilter::and).collect(Collectors.toSet());
+				Set<ISliceFilter> elementsFilters =
+						elements.stream().map(AndFilter::and).collect(ImmutableSet.toImmutableSet());
 
 				ISliceFilter elementAdditionalFilter = FilterBuilder.or(elementsFilters).optimize();
 
@@ -274,7 +275,7 @@ public class ManyToManyNDDecomposition implements IDecomposition {
 	@Override
 	public Map<String, Class<?>> getColumnTypes() {
 		return ImmutableMap.<String, Class<?>>builder()
-				.put(MapPathGet.getRequiredString(options, K_OUTPUT), Object.class)
+				.put(AdhocMapPathGet.getRequiredString(options, K_OUTPUT), Object.class)
 				.build();
 	}
 
