@@ -23,18 +23,20 @@
 package eu.solven.adhoc.measure.transformator.iterator;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.Spliterator;
 import java.util.Spliterators;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
-import eu.solven.adhoc.data.column.ISliceToValue;
-import eu.solven.adhoc.data.column.SliceToValue;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Iterables;
+
+import eu.solven.adhoc.data.column.Cuboid;
+import eu.solven.adhoc.data.column.ICuboid;
+import eu.solven.adhoc.data.column.SliceAndMeasure;
 import eu.solven.adhoc.data.column.navigable.MultitypeNavigableColumn;
 import eu.solven.adhoc.data.row.slice.IAdhocSlice;
 import eu.solven.adhoc.engine.step.CubeQueryStep;
@@ -61,16 +63,16 @@ public class UnderlyingQueryStepHelpersNavigable {
 	 * @return the union-Set of slices
 	 */
 	public static Stream<SliceAndMeasures> distinctSlices(CubeQueryStep queryStep,
-			List<? extends ISliceToValue> underlyings) {
+			List<? extends ICuboid> underlyings) {
 		boolean debug = queryStep.isDebug();
 
 		if (!debug && underlyings.size() == 1) {
 			// Fast track
-			ISliceToValue underlying = underlyings.getFirst();
+			ICuboid underlying = underlyings.getFirst();
 			return underlying.stream().map(slice -> {
 				Object value = IValueProvider.getValue(slice.getValueProvider());
 
-				return SliceAndMeasures.from(slice.getSlice(), queryStep, Collections.singletonList(value));
+				return SliceAndMeasures.from(slice.getSlice(), queryStep, List.of(value));
 			});
 		}
 
@@ -84,18 +86,18 @@ public class UnderlyingQueryStepHelpersNavigable {
 			// Merge all SliceAsMap in a Set
 			Set<IAdhocSlice> notSortedAsSet;
 			if (underlyings.isEmpty()) {
-				notSortedAsSet = Set.of();
+				notSortedAsSet = ImmutableSet.of();
 			} else if (underlyings.size() == 1) {
-				notSortedAsSet = underlyings.iterator().next().slicesSet();
+				notSortedAsSet = Iterables.getOnlyElement(underlyings).slicesSet();
 			} else {
-				notSortedAsSet = underlyings.stream().flatMap(ISliceToValue::slices).collect(Collectors.toSet());
+				notSortedAsSet = underlyings.stream().flatMap(ICuboid::slices).collect(ImmutableSet.toImmutableSet());
 			}
 
 			int size = underlyings.size();
 			return notSortedAsSet.stream().map(sliceAsMap -> {
 				List<Object> underlyingVs = new ArrayList<>(size);
 				for (int i = 0; i < size; i++) {
-					underlyingVs.add(ISliceToValue.getValue(underlyings.get(i), sliceAsMap));
+					underlyingVs.add(ICuboid.getValue(underlyings.get(i), sliceAsMap));
 				}
 
 				return SliceAndMeasures.from(sliceAsMap, queryStep, underlyingVs);
@@ -103,11 +105,11 @@ public class UnderlyingQueryStepHelpersNavigable {
 
 		} else {
 			// All underlyings are sorted (typically from MultitypeColumnNavigable)
-			List<ISliceToValue> sorted = new ArrayList<>();
+			List<ICuboid> sorted = new ArrayList<>();
 
-			for (ISliceToValue slices : underlyings) {
+			for (ICuboid slices : underlyings) {
 				if (slices.isEmpty()) {
-					sorted.add(SliceToValue.empty());
+					sorted.add(Cuboid.empty());
 				} else {
 					sorted.add(slices);
 				}
@@ -121,11 +123,11 @@ public class UnderlyingQueryStepHelpersNavigable {
 	 * 
 	 * @param queryStep
 	 * @param sorted
-	 *            {@link ISliceToValue} required to be sorted.
-	 * @return a merged {@link Stream}, based on the input sorted ISliceToValue
+	 *            {@link ICuboid} required to be sorted.
+	 * @return a merged {@link Stream}, based on the input sorted ICuboid
 	 */
 	private static Stream<SliceAndMeasures> mergeSortedStreamDistinct(CubeQueryStep queryStep,
-			List<? extends ISliceToValue> sorted) {
+			List<? extends ICuboid> sorted) {
 		List<Iterator<SliceAndMeasure<IAdhocSlice>>> sortedIterators = sorted.stream().peek(s -> {
 			if (!s.isSorted()) {
 				throw new IllegalArgumentException(
